@@ -7,6 +7,7 @@
 @import "form";
 @import "view";
 @import "menu";
+@import "banner";
 
 /**
  * Basic global CSS rules for Kalamar
